Closed Bug 150142 Opened 24 years ago Closed 24 years ago

imgLoader::GetMimeTypeFromContent doesn't check for malloc failure

Categories

(Core :: Graphics: ImageLib, defect)

x86
Windows 98
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: Biesinger, Assigned: Biesinger)

Details

Attachments

(1 file)

imgLoader::GetMimeTypeFromContent should check if strndup returned NULL and return an error in this case
Attached patch patchSplinter Review
pavlov, can you review?
Comment on attachment 87253 [details] [diff] [review] patch r=pavlov
Attachment #87253 - Flags: review+
Attachment #87253 - Flags: superreview+
Comment on attachment 87253 [details] [diff] [review] patch sr=tor
Checking in imgLoader.cpp; /cvsroot/mozilla/modules/libpr0n/src/imgLoader.cpp,v <-- imgLoader.cpp new revision: 1.45; previous revision: 1.44 done
Status: NEW → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
fixed on 1.0 branch as part of bug 93015
Keywords: fixed1.0.2
Should this be marked verified1.0.2 since bug# 93015 is verified on the branch?
probably - doing that.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: