bug 150142 r=pavlov sr=tor imgLoader::GetMimeTypeFromContent doesn't check for malloc failure